Script building AUR packages for ease of use.

--- a/master/pacman.conf
+++ b/master/pacman.conf
@@ -71,7 +71,7 @@ LocalFileSigLevel = Optional
 
 [customrepo]
 SigLevel = Optional TrustAll
-Server = file:///home/stephen/customrepo/$arch
+Server = TICKLE ME
 
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
